--- a/PILOTE_Suite.html
+++ b/PILOTE_Suite.html
@@ -1050,7 +1050,7 @@ fichier JSON contient identité, images, ordre et visibilité des modules.</div>
         </div>
 
         <div class="loader-overlay" id="loader"><div class="loader-spinner"></div><div class="loader-text">Chargement du module…</div></div>
-        <iframe class="module-frame active" id="frame-perdir" sandbox="allow-scripts allow-same-origin allow-popups allow-modals allow-downloads allow-forms" src="blob:null/51323e71-e24a-4649-809a-7b80b991e53a"></iframe>
+        <iframe class="module-frame active" id="frame-perdir" sandbox="allow-scripts allow-same-origin allow-popups allow-modals allow-downloads allow-forms" src="about:blank"></iframe>
         <iframe class="module-frame" id="frame-exam" sandbox="allow-scripts allow-same-origin allow-popups allow-modals allow-downloads allow-forms"></iframe>
         <iframe class="module-frame" id="frame-oral" sandbox="allow-scripts allow-same-origin allow-popups allow-modals allow-downloads allow-forms"></iframe>
         <iframe class="module-frame" id="frame-dhg" sandbox="allow-scripts allow-same-origin allow-popups allow-modals allow-downloads allow-forms"></iframe>
@@ -2130,78 +2130,11 @@ function saveSettings() {
     }
 
     // ═══ MODULE LOADING ═══
-    function b64toBlob(b64, name) {
-        // Decode base64 -> HTML string
+    function b64toBlob(b64) {
         const bin = atob(b64);
         const bytes = new Uint8Array(bin.length);
         for (let i = 0; i < bin.length; i++) bytes[i] = bin.charCodeAt(i);
-        let htmlStr = new TextDecoder('utf-8').decode(bytes);
-
-        // Inject a storage bridge INSIDE the iframe document so it works online even when parent can't access iframe DOM.
-        // This bridge mirrors localStorage mutations to the parent and supports restore via postMessage.
-        const frameId = (function(){
-            const map = { perdir:'frame-perdir', exam:'frame-exam', oral:'frame-oral', dhg:'frame-dhg', aed:'frame-aed', bibase:'frame-bibase', donnees:'frame-donnees', data:'frame-donnees' };
-            return map[name] || ('frame-' + String(name || '').toLowerCase());
-        })();
-
-        const bridge = `
-<script>
-(function(){
-  const FID = ${"__FID__"};
-  function safePost(msg){ try{ parent.postMessage(msg, '*'); }catch(e){} }
-
-  // dump at start
-  try{
-    const dump = {};
-    for (let i=0;i<localStorage.length;i++){
-      const k = localStorage.key(i);
-      dump[k] = localStorage.getItem(k);
-    }
-    safePost({type:'pilote-ls-dump', fid:FID, data: dump});
-  }catch(e){}
-
-  // wrap localStorage mutations
-  try{
-    const _set = localStorage.setItem.bind(localStorage);
-    const _rem = localStorage.removeItem.bind(localStorage);
-    const _clr = localStorage.clear.bind(localStorage);
-    localStorage.setItem = function(k,v){
-      _set(k,v);
-      safePost({type:'pilote-ls-set', fid:FID, key:String(k), value:String(v)});
-    };
-    localStorage.removeItem = function(k){
-      _rem(k);
-      safePost({type:'pilote-ls-remove', fid:FID, key:String(k)});
-    };
-    localStorage.clear = function(){
-      _clr();
-      safePost({type:'pilote-ls-clear', fid:FID});
-    };
-  }catch(e){}
-
-  // apply from parent (import)
-  window.addEventListener('message', function(ev){
-    const d = ev && ev.data;
-    if (!d || d.type !== 'pilote-ls-apply' || d.fid !== FID) return;
-    try{
-      const items = d.items || {};
-      localStorage.clear();
-      Object.keys(items).forEach(k=>localStorage.setItem(k, items[k]));
-      safePost({type:'pilote-ls-dump', fid:FID, data: items});
-    }catch(e){}
-  });
-})();
-<\/script>
-`.replace("__FID__", JSON.stringify(frameId));
-
-        // Inject before </body> if present, else append.
-        if (htmlStr.includes('</body>')) {
-            htmlStr = htmlStr.replace('</body>', bridge + '\n</body>');
-        } else {
-            htmlStr += '\n' + bridge;
-        }
-
-        return URL.createObjectURL(new Blob([htmlStr], { type: 'text/html; charset=utf-8' }));
+        return URL.createObjectURL(new Blob([bytes], { type: 'text/html; charset=utf-8' }));
     }
 
 
@@ -2246,7 +2179,7 @@ function saveSettings() {
         const frame = document.getElementById('frame-' + name);
         if (!loadedModules.has(name)) {
             document.getElementById('loader').classList.add('show');
-            if (!blobUrls[name]) blobUrls[name] = b64toBlob(MODULE_DATA[name], name);
+            if (!blobUrls[name]) blobUrls[name] = b64toBlob(MODULE_DATA[name]);
             frame.src = blobUrls[name];
             frame.onload = () => {
                 loadedModules.add(name);
